--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ChargeShare</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
 </resources>
