--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="sign_up">Sign up</string>
     <string name="add_purpose">Add Purpose</string>
+    <string name="adress">Adress</string>
+    <string name="time_from">From</string>
+    <string name="time_to">To</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="description">Description</string>
 </resources>
